# labs-template

./: .gitignore  CMakeLists.txt  README.md  cpp.cmake  irunner_make_package.sh  irunner_validate.sh  make_package.sh  nasm.cmake  validate.sh
00_sample/: CMakeLists.txt  build.sh  tester_config.py
00_sample/solution_src/: file.cpp  file.h  other_file.cpp
00_sample/tests_src/: another_file_with_tests.cc  tests.cc
common/gmock/: gmock-all.cc
common/gtest/: gtest-all.cc  gtest-death-test.cc  gtest-port.cc  gtest.cc
common/testerlib/: base.py  binary_wrapper.py  configurator.py  fake_test.py  gtest.py  gtest_wrapper.py  interface.py  runner.py  tester.py
common/utils/: utils.cc  utils.h
common/yacontest/: Makefile  checker.cpp  run_build.sh  validate_yacontest.sh
